--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           that file. Click on the DELETE button to remove the file from the cache.
         </p>
         <ul id="file_list">
-          <li>No Files currently.</li>
+          <li id="no_file">No Files currently.</li>
         </ul>
       </section>
       <section class="data_display">
