--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       </section>
       <section class="data_display">
         <!-- Contents of a saved file displayed here -->
-        <h2>File Contents <span></span></h2>
+        <h2>File Contents <span id="data_display_fileName"></span></h2>
         <p>Select a File from the list above.</p>
-        <pre><code>Empty</code></pre>
+        <p id="data_display_content">Empty</p>
       </section>
     </main>
   </body>
